--- a/Frontend/category.html
+++ b/Frontend/category.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport" /> <!-- for css @media -->
-    <title>Go-Bicikli Shop - Home</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" /> <!-- css @media-hoz -->
+    <title>Go-Bicikli Shop - Főoldal</title>
     <link rel="icon" type="image/x-icon" href="assets/images/gb-logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -25,21 +25,21 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link color-white" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link color-white" href="index.html">Főoldal <span class="sr-only">(aktív)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="category.html">Categories</a>
+                        <a class="nav-link" href="category.html">Kategóriák</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a></li>
+                        <a class="nav-link" href="shop.html">Bolt</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a></li>
+                        <a class="nav-link" href="contact.html">Kapcsolat</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="shopping-cart.html"><img style="height: 30px;" src="assets/icons/shopping-cart-white.png"></a></li>
+                        <a class="nav-link" href="shopping-cart.html"><img style="height: 30px;" src="assets/icons/shopping-cart-white.png"></a>
                     </li>
                 </ul>
             </div>
@@ -51,112 +51,112 @@
         <div class="row">
             <div class="col-12 col-sm-3 col-md-3 col-lg-3 pt-2 p-0">
                 <ul class="vertical-nav navbar-nav">
-                    <h2 class="vertical-nav-element" style="background-color: #D8D2CB;"><small>Categories:</small></h2>
-                    <li><a href="categories/mountain.html">Mountain</a></li>
+                    <h2 class="vertical-nav-element" style="background-color: #D8D2CB;"><small>Kategóriák:</small></h2>
+                    <li><a href="categories/mountain.html">Hegyi</a></li>
                     <li><a href="categories/gravel.html">Gravel</a></li>
-                    <li><a href="categories/road.html">Road</a></li>
-                    <li><a href="categories/city.html">City</a></li>
-                    <li><a href="categories/electric.html">Electric</a></li>
+                    <li><a href="categories/road.html">Út</a></li>
+                    <li><a href="categories/city.html">Városi</a></li>
+                    <li><a href="categories/electric.html">Elektromos</a></li>
                 </ul>
             </div>
             <div class="col-12 col-sm-9 col-md-9 col-lg-9 pt-2 pt-4">
                 <div>
-                    <h3>Mountain Bikes</h3>
+                    <h3>Hegyi Kerékpárok</h3>
                     <hr>
-                    <p>Mountain Bikes are perfect for riders who want a comfortable commute, ride with the family and get off the beaten track.
-                    </br>Also are perfect for rides that include a bit of everything. Long undulating terrain, technical terrain and exciting descents.</p>
+                    <p>A hegyi kerékpárok tökéletesek azok számára, akik kényelmes közlekedést, családi kirándulásokat és kalandokat keresnek az ismeretlen úton.
+                    </br>Emellett ideálisak olyan túrákra, amelyek mindent tartalmaznak: hosszú, hullámzó terep, technikai részek és izgalmas lejtők.</p>
                     <div class="container mb-3">
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Marin Bolinas Ridge 1 Blue.jpg" alt="Mountain" class="galery-card-photo">
+                                    <img src="assets/images/Marin Bolinas Ridge 1 Blue.jpg" alt="Hegyi" class="galery-card-photo">
                                     <h5>Marin Bolinas Ridge 1</h5>
-                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(1)">Read more</a>
+                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(1)">Tovább</a>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3">
                                 <div class="galery-card">
-                                    <img src="assets/images/Marin Bolinas Ridge 2 Black.jpg" alt="Mountain" class="galery-card-photo">
+                                    <img src="assets/images/Marin Bolinas Ridge 2 Black.jpg" alt="Hegyi" class="galery-card-photo">
                                     <h5>Marin Bolinas Ridge 2</h5>
-                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(2)">Read more</a>
+                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(2)">Tovább</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div>
-                    <h3>Gravel bikes</h3>
+                    <h3>Gravel Kerékpárok</h3>
                     <hr>
-                    <p>Light, fast and agile, our performance road bikes are perfect for taking that local KOM or winning the next crit race.</p>
+                    <p>Könnyű, gyors és agilis, teljesítményorientált kerékpárjaink ideálisak, ha egy helyi KOM-ot szeretnél elérni, vagy megnyerni a következő kritikus versenyt.</p>
                     <div class="container mb-3">
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Marin Gestalt Blue.jpg" alt="Mountain" class="galery-card-photo">
+                                    <img src="assets/images/Marin Gestalt Blue.jpg" alt="Gravel" class="galery-card-photo">
                                     <h5>Marin Gestalt</h5>
-                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(3)">Read more</a>
+                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(3)">Tovább</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div>
-                    <h3>Road bikes</h3>
+                    <h3>Út Kerékpárok</h3>
                     <hr>
-                    <p>Road bikes are perfect for people who want to ride—ideal for riders who want to jump on the bike and ride with no destination.</p>
+                    <p>Az úti kerékpárok tökéletesek azoknak, akik egyszerűen csak pedálozni szeretnének – ideálisak azok számára, akik bárhová el szeretnének jutni.</p>
                     <div class="container mb-3">
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Polygon Strattos S5 - Shimano 105.jpg" alt="Mountain" class="galery-card-photo">
+                                    <img src="assets/images/Polygon Strattos S5 - Shimano 105.jpg" alt="Út" class="galery-card-photo">
                                     <h5>Polygon Strattos S5 - Shimano 105</h5>
-                                    <a class="btn btn-secondary btn-block" href="single-item.html"  onclick="setIdOfItemToShow(4)">Read more</a>
+                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(4)">Tovább</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div>
-                    <h3>City bikes</h3>
+                    <h3>Városi Kerékpárok</h3>
                     <hr>
-                    <p>Are you looking to cruise along the beach? Want to relax on the way to your next coffee? or just want to ride in comfort? These bikes are perfect for you.</p>
+                    <p>Ha a tengerpart mentén szeretnél tekerni, vagy egyszerűen csak kényelmesen eljutni a kávézóba, akkor ezek a kerékpárok tökéletesek számodra.</p>
                     <div class="container mb-3">
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Marin Kentfield CS2 ST Grey.jpg" alt="Mountain" class="galery-card-photo">
+                                    <img src="assets/images/Marin Kentfield CS2 ST Grey.jpg" alt="Városi" class="galery-card-photo">
                                     <h5>Marin Kentfield CS2 ST</h5>
-                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(5)">Read more</a>
+                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(5)">Tovább</a>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Polygon Sierra Deluxe Sport.jpg" alt="Mountain" class="galery-card-photo">
+                                    <img src="assets/images/Polygon Sierra Deluxe Sport.jpg" alt="Városi" class="galery-card-photo">
                                     <h5>Polygon Sierra Deluxe Sport</h5>
-                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(6)">Read more</a>
+                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(6)">Tovább</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div>
-                    <h3>Electric bikes</h3>
+                    <h3>Elektromos Kerékpárok</h3>
                     <hr>
-                    <p>Strength and durability have not been skimped; instead, Mt Bromo N utilizes Shimano’s lightweight 504 Wh integrated battery to keep the front end light and the bike, as a whole, more balanced and playful.
+                    <p>A Polygon Mt Bromo N7 erőssége és tartóssága nem csorbult; a Shimano 504 Wh integrált akkumulátorának köszönhetően könnyedén megőrzi a stabilitást és könnyen irányítható.</p>
                     <div class="container mb-3">
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Polygon Mt Bromo N7.jpg" alt="Mountain" class="galery-card-photo">
+                                    <img src="assets/images/Polygon Mt Bromo N7.jpg" alt="Elektromos" class="galery-card-photo">
                                     <h5>Polygon Mt Bromo N7</h5>
-                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(7)">Read more</a>
+                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(7)">Tovább</a>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Polygon Mt Bromo N8.jpg" alt="Mountain" class="galery-card-photo">
+                                    <img src="assets/images/Polygon Mt Bromo N8.jpg" alt="Elektromos" class="galery-card-photo">
                                     <h5>Polygon Mt Bromo N8</h5>
-                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(8)">Read more</a>
+                                    <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(8)">Tovább</a>
                                 </div>
                             </div>
                         </div>
