--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport" /> <!-- for css @media -->
-    <title>Go-Bicikli Shop - About</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" /> <!-- CSS @media-hoz -->
+    <title>Go-Bicikli Shop - Kapcsolat</title>
     <link rel="icon" type="image/x-icon" href="assets/images/gb-logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
     <script src="src/isUserLoggedIn.js"></script>
 </head>
 <body onload="changeLoginText()">
-    <!--================ Start Header Menu Area =================-->
+    <!--================ Kezdőlap Menü Terület =================-->
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top topnav">
             <a class="navbar-brand" href="index.html">Go-Bicikli</a>
@@ -23,16 +23,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link color-white" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link color-white" href="index.html">Főoldal <span class="sr-only">(jelenleg)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="category.html">Categories</a>
+                        <a class="nav-link" href="category.html">Kategóriák</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a></li>
+                        <a class="nav-link" href="shop.html">Bolt</a></li>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact</a></li>
+                        <a class="nav-link" href="contact.html">Kapcsolat</a></li>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -43,22 +43,23 @@
             </div>
         </nav>
     </header>
-    <!--================ End Header Menu Area =================-->
-    <!--================ Start Contact Area ================-->
+    <!--================ Kezdőlap Menü Terület Vége =================-->
+    
+    <!--================ Kapcsolat Terület Kezdete =================-->
     <div class="container pt-4">
         <div class="row">
             <div class="col-12 mb-4">
-                <h2>Contact us:</h2>
+                <h2>Vedd fel velünk a kapcsolatot:</h2>
                 <span>
-                    Here at Go-Bicikli Shop, we pride ourselves on excellent customer service. Please feel free to get in contact with us via email or phone and we will do our best to help you with what you are looking for. 
+                    A Go-Bicikli Shop-nál kiemelten fontos számunkra a kiváló ügyfélszolgálat. Kérjük, bátran vedd fel velünk a kapcsolatot e-mailben vagy telefonon, és mi mindent megteszünk, hogy segítsünk, amiben csak tudunk.
                 </span>
                 <br>
-                <ul  style="list-style-type: none; display: inline;">
+                <ul style="list-style-type: none; display: inline;">
                     <li>
-                        <img src="assets/icons/mail.png" class="icon"> Email: <b>Please fill out our </b><a href="contactForm.html">online form here</a> 
+                        <img src="assets/icons/mail.png" class="icon"> E-mail: <b>Kérjük, töltsd ki </b><a href="contactForm.html">online űrlapunkat itt</a>
                     </li>
                     <li>
-                        <img src="assets/icons/phone-call.png" class="icon"> Phone - Customer Service: (650) 272-3778 Monday - Friday 9:00am - 5pm PST
+                        <img src="assets/icons/phone-call.png" class="icon"> Telefon - Ügyfélszolgálat: (650) 272-3778 Hétfőtől Péntekig 9:00 - 17:00 PST
                     </li>
                     <li>
                         <img src="assets/icons/location.png" class="icon"><b> Go-Bicikli Shop Inc.</b> 2711 West Loker Ave, Carlsbad 92010, California, USA
@@ -66,75 +67,77 @@
                 </ul>
             </div>
             <div class="col-12 mb-4">
-                <h3>Customer Service Hours</h3>
+                <h3>Ügyfélszolgálati Nyitvatartás</h3>
                 <table>
                     <tr>
-                        <th>Days</th>
-                        <th>Hours</th>
+                        <th>Napok</th>
+                        <th>Órák</th>
                     </tr>
                     <tr>
-                        <td>Monday</td>
-                        <td>9:00am - 5pm</td>
+                        <td>Hétfő</td>
+                        <td>9:00 - 17:00</td>
                     </tr>
                     <tr>
-                        <td>Tuesday</td>
-                        <td>9:00am - 5pm</td>
+                        <td>Kedd</td>
+                        <td>9:00 - 17:00</td>
                     </tr>
                     <tr>
-                        <td>Wednesday</td>
-                        <td>9:00am - 5pm</td>
+                        <td>Szerda</td>
+                        <td>9:00 - 17:00</td>
                     </tr>
                     <tr>
-                        <td>Thursday</td>
-                        <td>9:00am - 5pm</td>
+                        <td>Csütörtök</td>
+                        <td>9:00 - 17:00</td>
                     </tr>
                     <tr>
-                        <td>Friday</td>
-                        <td>9:00am - 5pm</td>
+                        <td>Péntek</td>
+                        <td>9:00 - 17:00</td>
                     </tr>
                     <tr>
-                        <td>Saturday/Sunday</td>
-                        <td>Online Orders only. Orders may take up to 5 business days to process</td>
+                        <td>Szombat/Vasárnap</td>
+                        <td>Csak online rendelések. A rendelések feldolgozása akár 5 munkanapot is igénybe vehet.</td>
                     </tr>
                 </table>
             </div>
             <div class="col-12 mb-4" style="min-height: 350px">
-                <!--================ End Contact Area =================-->
+                <!--================ Kapcsolat Terület Vége =================-->
                 </br>
-                <!--================ Start Location Area =================-->
+                <!--================ Térkép Terület Kezdete =================-->
                 <iframe class="col-12 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3341.118929719889!2d-117.26114508520129!3d33.13223998086627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7498ffac23c3%3A0xca7213f56f0c4b5b!2s2711%20Loker%20Ave%20W%2C%20Carlsbad%2C%20CA%2092010%2C%20USA!5e0!3m2!1sen!2ssi!4v1648934455471!5m2!1sen!2ssi" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <!--================ End Map Area =================-->
+                <!--================ Térkép Terület Vége =================-->
             </div>
         </div>
     </div>
-    <!--================ Start Newsletter Area =================-->
+
+    <!--================ Hírlevél Terület Kezdete =================-->
     <hr>
     </br>
     <div class="justify-content-md-center pt-1">
         <form class="" action="">
             <div class="container justify-content-md-center">
                 <div class="row mb-3 text-center">
-                    <h4 class="col-12">Join our newsletter for latest news and offers</h4>
+                    <h4 class="col-12">Iratkozz fel hírlevelünkre a legfrissebb hírekért és ajánlatokért</h4>
                     <div class="col-4 pr-1">
-                    <input type="text" class="form-control" placeholder="Name" name="name" required>
+                    <input type="text" class="form-control" placeholder="Név" name="name" required>
                     </div>
                     <div class="col-4 pr-1">
-                    <input type="text" class="form-control" placeholder="Email address" name="mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                    <input type="text" class="form-control" placeholder="Email cím" name="mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
                     </div>
                     <div class="col-4 pr-1">
-                        <button type="submit" class="btn btn-primary btn-block" onclick="alert('Subscribe')">Subscribe</button>
+                        <button type="submit" class="btn btn-primary btn-block" onclick="alert('Feliratkozás')">Feliratkozás</button>
                     </div>
                 </div>
             </div>
         </form>
     </div>
-    <!--================ End Newsletter Area =================-->
-    <!--================ Start Footer Area =================-->
+    <!--================ Hírlevél Terület Vége =================-->
+    
+    <!--================ Footer Terület Kezdete =================-->
     <footer class="page-footer font-small">
         <div class="footer-copyright text-center py-3">© 2025 Copyright:
             <a href="mailto:kiss.attila.roland.26@dszcbaross.edu.hu"> kiss.attila.roland.26@dszcbaross.edu.hu</a>
         </div>
     </footer>
-    <!--================ End Footer Area =================-->
+    <!--================ Footer Terület Vége =================-->
 </body>
 </html>
