--- a/Frontend/LoginandRegistration.html
+++ b/Frontend/LoginandRegistration.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <link rel="icon" type="image/x-icon" href="assets/images/gb-logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Registration</title>
+    <title>Bejelentkezés és Regisztráció</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -71,69 +71,69 @@
 <body>
     <div class="container">
         <div id="login-form" class="form-container">
-            <h2>Login</h2>
+            <h2>Bejelentkezés</h2>
             <form id="login">
-                <input type="text" id="login-username" placeholder="Username" required>
-                <input type="password" id="login-password" placeholder="Password" required>
-                <button type="submit">Login</button>
+                <input type="text" id="login-username" placeholder="Felhasználónév" required>
+                <input type="password" id="login-password" placeholder="Jelszó" required>
+                <button type="submit">Bejelentkezés</button>
             </form>
-            <p>Don't have an account? <a href="#" id="show-register">Register here!</a></p>
+            <p>Nincs még fiókod? <a href="#" id="show-register">Regisztrálj itt!</a></p>
         </div>
 
         <div id="register-form" class="form-container" style="display: none;">
-            <h2>Register</h2>
+            <h2>Regisztráció</h2>
             <form id="register">
-                <input type="text" id="register-username" placeholder="Username" required>
-                <input type="password" id="register-password" placeholder="Password" required>
-                <button type="submit">Register</button>
+                <input type="text" id="register-username" placeholder="Felhasználónév" required>
+                <input type="password" id="register-password" placeholder="Jelszó" required>
+                <button type="submit">Regisztrálás</button>
             </form>
-            <p>Already have an account? <a href="#" id="show-login">Login here!</a></p>
+            <p>Már van fiókod? <a href="#" id="show-login">Jelentkezz be itt!</a></p>
         </div>
     </div>
 
     <script>
-        // Switch to the registration form
+        // Átváltás a regisztrációs űrlapra
         document.getElementById('show-register').addEventListener('click', function(event) {
             event.preventDefault();
             document.getElementById('login-form').style.display = 'none';
             document.getElementById('register-form').style.display = 'block';
         });
 
-        // Switch to the login form
+        // Átváltás a bejelentkezési űrlapra
         document.getElementById('show-login').addEventListener('click', function(event) {
             event.preventDefault();
             document.getElementById('register-form').style.display = 'none';
             document.getElementById('login-form').style.display = 'block';
         });
 
-        // Handle registration form submission
+        // Regisztrációs űrlap beküldése
         document.getElementById('register').addEventListener('submit', function(event) {
             event.preventDefault();
             const username = document.getElementById('register-username').value;
             const password = document.getElementById('register-password').value;
 
-            // Store the username and password in localStorage (for demonstration purposes only)
+            // A felhasználónevet és jelszót tároljuk a localStorage-ban (csak bemutató céljából)
             localStorage.setItem(username, password);
-            alert('Registration successful! You can now log in.');
+            alert('Sikeres regisztráció! Most már be tudsz jelentkezni.');
             document.getElementById('register-form').style.display = 'none';
             document.getElementById('login-form').style.display = 'block';
         });
 
-        // Handle login form submission
+        // Bejelentkezési űrlap beküldése
         document.getElementById('login').addEventListener('submit', function(event) {
             event.preventDefault();
             const username = document.getElementById('login-username').value;
             const password = document.getElementById('login-password').value;
 
-            // Retrieve the stored password from localStorage
+            // A tárolt jelszó lekérése a localStorage-ból
             const storedPassword = localStorage.getItem(username);
 
             if (storedPassword === password) {
-                alert('Login successful!');
-                // Redirect to index.html
+                alert('Sikeres bejelentkezés!');
+                // Átirányítás az index.html oldalra
                 window.location.href = 'index.html';
             } else {
-                alert('Invalid username or password!');
+                alert('Érvénytelen felhasználónév vagy jelszó!');
             }
         });
     </script>
