--- a/Frontend/Payment.html
+++ b/Frontend/Payment.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment</title>
+    <title>Fizetés</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <style>
         body {
@@ -21,21 +21,21 @@
 </head>
 <body>
     <div class="payment-container">
-        <h1>Payment</h1>
+        <h1>Fizetés</h1>
         <form class="payment-form">
             <div class="form-group">
-                <label for="cardNumber">Card Number</label>
-                <input type="text" class="form-control" id="cardNumber" placeholder="Enter card number" required>
+                <label for="cardNumber">Kártyaszám</label>
+                <input type="text" class="form-control" id="cardNumber" placeholder="Írd be a kártyaszámot" required>
             </div>
             <div class="form-group">
-                <label for="expiryDate">Expiry Date</label>
-                <input type="text" class="form-control" id="expiryDate" placeholder="MM/YY" required>
+                <label for="expiryDate">Lejárat dátuma</label>
+                <input type="text" class="form-control" id="expiryDate" placeholder="HH/ÉÉ" required>
             </div>
             <div class="form-group">
                 <label for="cvv">CVV</label>
                 <input type="text" class="form-control" id="cvv" placeholder="CVV" required>
             </div>
-            <button type="submit" class="btn btn-primary">Pay Now</button>
+            <button type="submit" class="btn btn-primary">Fizetés most</button>
         </form>
     </div>
 </body>
