--- a/Frontend/contactForm.html
+++ b/Frontend/contactForm.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport" /> <!-- for css @media -->
-    <title>Go-Bicikli Shop - About</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" /> <!-- CSS @media-hoz -->
+    <title>Go-Bicikli Shop - Rólunk</title>
     <link rel="icon" type="image/x-icon" href="assets/images/gb-logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
     <script src="src/isUserLoggedIn.js"></script>
 </head>
 <body onload="changeLoginText()">
-    <!--================ Start Header Menu Area =================-->
+    <!--================ Kezdőlap Menü Terület =================-->
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top topnav">
             <a class="navbar-brand" href="index.html">Go-Bicikli</a>
@@ -23,16 +23,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link color-white" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link color-white" href="index.html">Főoldal <span class="sr-only">(jelenleg)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="category.html">Categories</a>
+                        <a class="nav-link" href="category.html">Kategóriák</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a></li>
+                        <a class="nav-link" href="shop.html">Bolt</a></li>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact</a></li>
+                        <a class="nav-link" href="contact.html">Kapcsolat</a></li>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -40,35 +40,34 @@
             </div>
         </nav>
     </header>
-    <!--================ End Header Menu Area =================-->
+    <!--================ Kezdőlap Menü Terület Vége =================-->
     <div class="container container-height pt-4">
         <div class="row justify-content-center">
             <div class="col-12 col-xs-10 col-sm-8 col-md-8 col-lg-8 col-xl-8 mb-4">
-                <h3>Send us a message:</h3>
+                <h3>Írj nekünk üzenetet:</h3>
                 <form>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                        <label for="exampleInputEmail1">Email cím</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Add meg az email címet" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Description</label>
+                        <label for="exampleFormControlTextarea1">Leírás</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                     </div>
                     </br>
-                    <button type="submit" class="btn btn-primary btn-block" onclick="alert('Send')">Send</button>
+                    <button type="submit" class="btn btn-primary btn-block" onclick="alert('Küldés')">Küldés</button>
                 </form>
             </div>
         </div>
     </div>
     </br>
 
-
-    <!--================ Start Footer Area =================-->
+    <!--================ Footer Terület Kezdete =================-->
     <footer class="page-footer font-small">
         <div class="footer-copyright text-center py-3">© 2025 Copyright:
             <a href="mailto:kiss.attila.roland.26@dszcbaross.edu.hu"> kiss.attila.roland.26@dszcbaross.edu.hu</a>
         </div>
     </footer>
-    <!--================ End Footer Area =================-->
+    <!--================ Footer Terület Vége =================-->
 </body>
 </html>
